--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -46,11 +46,14 @@
  }
 
  @media only screen and (max-width: 1400px) {
+    .su_vdo_bg {
+        background-size: 540px 525px;
+    }
     .su_details_img {
         width: 190px;
     }
     .pakket2go_vdo_set>iframe { 
-        width: 500px;
+        width: 470px;
     }
     .su_position_right {
         top: 140px;
@@ -195,7 +198,7 @@
     .su_map_img_dashboard_new {
         width: 130px;
     }
-    .su_total_details_price {
+    .su_total_details_price a{
         font-size: 22px;
     }
     .su_total_details {
@@ -214,7 +217,11 @@
         width: 145px;
     }
     .pakket2go_vdo_set>iframe { 
-        width: 450px;
+        width: 390px;
+        height: 390px;
+    }
+    .su_vdo_bg {
+        background-size: 450px 460px;
     }
     .su_after_img::after {
         background: none;
@@ -380,6 +387,9 @@
  @media only screen and (max-width: 991px) {
 
      /* sumit code start   */
+     .su_vdo_bg {
+        background-size: 690px 460px;
+    }
      .su_map_img_dashboard_new {
         width: 160px;
     }
@@ -667,6 +677,9 @@
 
  /* sumit code start   */
  @media screen and (max-width: 768px) {
+    .su_vdo_bg {
+        background-size: 515px 460px;
+    }
     .su_details_img img {
         width: 100%;
         height: 100%;
@@ -681,7 +694,7 @@
     .su_flex_768_block{
         display: block;
     }
-    .su_total_details_price {
+    .su_total_details_price a{
         font-size: 20px;
         line-height: 30px;
     }
@@ -1006,6 +1019,12 @@
     }
  }
 
+ @media only screen and (max-width: 530px){
+    .su_vdo_bg {
+        background-size: 480px 460px;
+    }
+ }
+
  @media only screen and (max-width: 500px){
     .su_margin_y_12 {
         margin: 5px 0px;
@@ -1024,6 +1043,9 @@
  @media only screen and (max-width: 480px) {
 
      /* sumit code start  */
+     .su_vdo_bg {
+        background-size: 435px 460px;
+    }
      .su_mr_10_480{
         margin-left: 22px;
      }
@@ -1574,12 +1596,18 @@
  }
 
  @media only screen and (max-width: 435px){
+    .su_vdo_bg {
+        background-size: 395px 460px;
+    }
     .phone_input {
         line-height: 15px;
     }
  }
 
  @media only screen and (max-width: 425px) {
+    .su_vdo_bg {
+        background-size: 395px 340px;
+    }
     .pakket2go_vdo_set>iframe {
         height: 280px;
     }
@@ -1589,6 +1617,9 @@
  }
 
  @media only screen and (max-width: 400px) {
+    .su_vdo_bg {
+        background-size: 355px 340px;
+    }
     .su_register_card {
         padding: 20px 5px 20px 5px;
     }
@@ -1625,6 +1656,9 @@
  }
 
  @media only screen and (max-width: 375px) {
+    .su_vdo_bg {
+        background-size: 330px 340px;
+    }
      .pakket_btn.me-3 {
          margin-right: 1rem !important
      }
@@ -1651,6 +1685,12 @@
         width: 125px;
         overflow: hidden;
         text-overflow: ellipsis;
+    }
+ }
+
+ @media screen and (max-width: 350px) {
+    .su_vdo_bg {
+        background-size: 300px 340px;
     }
  }
 
