--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1055,6 +1055,12 @@
  @media only screen and (max-width: 480px) {
 
      /* sumit code start  */
+     .width_popup_detail {
+        max-width: 100%;
+    }
+     #booking_detail_content{
+        padding: 0px;
+     }
      .download_pdf_btn {
         font-size: 14px;
         line-height: 17px;
