--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2100,7 +2100,8 @@ p.dis_content {
     padding: 9px 30px;
     border: none;
 }
-.su_Apply_Now:hover{
+
+.su_Apply_Now:hover {
     color: #FFFFFF !important;
 }
 
@@ -2367,10 +2368,12 @@ p.dis_content {
     padding: 5px 15px;
     margin-left: 12px;
 }
-.su_item_name_btn:hover{
+
+.su_item_name_btn:hover {
     color: #000000;
 }
-.su_item_view_details{
+
+.su_item_view_details {
     background: #01B537;
     border-radius: 50px;
     font-weight: 600;
@@ -2379,7 +2382,8 @@ p.dis_content {
     color: #FFFFFF;
     padding: 5px 15px;
 }
-.su_item_view_details:hover{
+
+.su_item_view_details:hover {
     color: #FFFFFF;
 }
 
@@ -3187,73 +3191,89 @@ p.dis_content {
     width: 100%;
     height: 100%;
 }
-.su_flex_column{
+
+.su_flex_column {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-.su_order_width_20{
+
+.su_order_width_20 {
     width: 20%;
 }
-.su_from_text{
+
+.su_from_text {
     font-weight: 600;
     font-size: 18.6853px;
     line-height: 28px;
     color: #FC4C00;
 }
-.su_margin_right_20{
+
+.su_margin_right_20 {
     margin-right: 20px;
 }
-.su_order_width_80{
+
+.su_order_width_80 {
     width: 80%;
 }
-.su_to_text{
+
+.su_to_text {
     font-weight: 600;
     font-size: 18.6853px;
     line-height: 28px;
     color: #01B537;
 }
-.su_total_details{
+
+.su_total_details {
     font-weight: 500;
     font-size: 24.9138px;
     line-height: 21px;
     color: #313131;
 }
-.su_total_details_price a{
+
+.su_total_details_price a {
     font-weight: 700;
     font-size: 24.9138px;
     line-height: 21px;
     color: #FC4C00;
 }
-.su_flex_768_block{
+
+.su_flex_768_block {
     display: flex;
 }
+
 /* order_detail end  */
-.su_vdo_bg{
+.su_vdo_bg {
     background-image: url("../img/bg_both_img.png");
     background-size: 650px 525px;
     background-repeat: no-repeat;
     background-position: right top;
     padding: 35px;
 }
-.pakket2go_vdo_set>iframe{
+
+.pakket2go_vdo_set>iframe {
     width: 100%;
     border-radius: 8px;
 }
-.su_submit_btn{
+
+.su_submit_btn {
     background: transparent;
     border: none;
 }
-.w-child-1{
+
+.w-child-1 {
     width: 55%;
 }
-.w-child-2{
+
+.w-child-2 {
     width: 40%;
 }
-.su_flex_block_at_767{
+
+.su_flex_block_at_767 {
     display: flex;
 }
-.download_pdf_btn{
+
+.download_pdf_btn {
     background: #01B537;
     border-radius: 50px;
     font-weight: 600;
@@ -3262,12 +3282,193 @@ p.dis_content {
     color: #FFFFFF;
     padding: 10px 20px;
 }
-.download_pdf_btn:hover{
+
+.download_pdf_btn:hover {
     color: #FFFFFF;
 }
 
 /* pop up set start */
-.width_popup_detail{
+.width_popup_detail {
     max-width: 90%;
 }
+
 /* pop up set end */
+/* Upload your documents start  */
+.upload_header_bg {
+    background: #25282B;
+    text-align: center;
+    padding: 15px 0px;
+}
+
+.su_Upload_heading {
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 38px;
+    text-align: center;
+    color: #313131;
+    margin-bottom: 0px;
+    padding: 5px 0px 30px 0px;
+}
+
+.su_upload_border {
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
+    margin: 30px;
+    padding: 30px;
+}
+
+.su_upload_label {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    color: #313131;
+    margin-bottom: 15px;
+}
+
+.su_upload_input {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #7B7B7B;
+    border: none;
+    width: 100%;
+    padding: 12px 30px 12px 55px;
+}
+
+.su_upload_input:focus-visible {
+    outline: none !important;
+}
+
+.su_upload_input.bank {
+    background: url(../svg/bank_svg.svg);
+    background-repeat: no-repeat;
+    background-position: 3% center;
+}
+
+.su_upload_input.account_holder {
+    background: url(../svg/account_holder_svg.svg);
+    background-repeat: no-repeat;
+    background-position: 3% center;
+}
+
+.su_upload_input_bg_clr {
+    background: #F5F5F5;
+    border-radius: 13.118px;
+}
+
+.su_upload_input::placeholder {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #7B7B7B;
+}
+
+.su_upload_border_top {
+    border-top: 1px solid #B8B8B8;
+    margin: 30px 0px 15px 0px;
+}
+
+.su_upload_logo {
+    width: 155px;
+    height: 35px;
+    margin: auto;
+}
+
+.su_upload_logo img {
+    width: 100%;
+    height: 100%;
+}
+
+.su_upload_button {
+    background: #01B537;
+    box-shadow: 2.42589px 3.63884px 4.85179px rgba(0, 0, 0, 0.1);
+    border-radius: 51.5464px;
+    font-weight: 600;
+    font-size: 20.6186px;
+    line-height: 31px;
+    color: #FFFFFF;
+    border: none;
+    padding: 5px 35px 10px 35px;
+}
+
+.su_upload_button span {
+    margin-left: 20px;
+}
+
+.su_upload_para {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: #313131;
+    margin-bottom: 12px;
+}
+
+.dashed {
+    background: #C9F0D5;
+    border: 2px dashed #01B537;
+    border-radius: 20px;
+    padding: 22px;
+}
+
+.su_upload_Drag_para {
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 20px;
+    color: #313131;
+    margin-bottom: 4px;
+    margin-top: 15px;
+}
+
+.su_upload_Drag_or {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #313131;
+    margin-bottom: 5px;
+}
+
+.su_upload_sm_btn {
+    background: #01B537;
+    border-radius: 7.90322px;
+    border: none;
+    font-weight: 600;
+    font-size: 12.4727px;
+    line-height: 19px;
+    color: #FFFFFF;
+    padding: 5px 25px;
+    margin-bottom: 15px;
+}
+
+.su_upload_Drag_para_green {
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 16px;
+    color: #01B537;
+    margin-bottom: 0px;
+}
+
+.su_upload_bg_light {
+    background: #F5F5F5;
+    border-radius: 10px;
+    padding: 8px;
+}
+
+.su_license_img {
+    width: 115px;
+    height: 70px;
+}
+
+.su_license_img img {
+    width: 100%;
+    height: 100%;
+}
+.su_license_details{
+    font-weight: 600;
+font-size: 15px;
+line-height: 22px;
+color: #313131;
+margin-bottom: 5px;
+}
+
+/* Upload your documents end  */
