--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3463,12 +3463,332 @@ p.dis_content {
     width: 100%;
     height: 100%;
 }
-.su_license_details{
+
+.su_license_details {
     font-weight: 600;
-font-size: 15px;
-line-height: 22px;
-color: #313131;
-margin-bottom: 5px;
+    font-size: 15px;
+    line-height: 22px;
+    color: #313131;
+    margin-bottom: 5px;
 }
 
 /* Upload your documents end  */
+/* chat style start  */
+.su_chat_bg {
+    background-color: #F5F5F5;
+}
+
+.width_35 {
+    width: 35%;
+    background-color: #ffff;
+    padding: 10px 15px;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.12);
+}
+
+.su_chat_filter {
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 38px;
+    color: #313131;
+}
+
+.su_chat_Reset {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    color: #EE233A;
+}
+
+.su_chat_filter:hover {
+    color: #313131;
+}
+
+.su_chat_Reset:hover {
+    color: #EE233A;
+}
+
+.su_Sort_By {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: #313131;
+}
+
+.su_filter_select {
+    background: #FFFFFF;
+    border: 1px solid #FC4C00;
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 22px;
+    color: #FC4C00;
+    text-align: center;
+    padding: 8px;
+}
+
+.su_filter_heading {
+    margin: 20px 0px;
+}
+
+.su_filter_select:hover {
+    color: #ffff;
+    background: #FC4C00;
+}
+
+.su_filter_select.active {
+    color: #ffff;
+    background: #FC4C00;
+}
+
+.su_chat_search_input {
+    border: none;
+    background-color: none;
+    border-radius: 29.3478px;
+    font-weight: 400;
+    font-size: 14.087px;
+    line-height: 21px;
+    color: #727272;
+    width: 100%;
+    background: #FFFFFF;
+    box-shadow: inset 1.17391px 1.17391px 7.04348px rgb(0 0 0 / 15%);
+    border-radius: 29.3478px;
+    padding: 12px 55px;
+}
+
+.su_chat_search_input:focus-visible {
+    outline: none !important;
+}
+
+.su_chat_search_input.search {
+    background: url(../svg/chat_search.svg);
+    background-repeat: no-repeat;
+    background-position: 3% center;
+}
+
+.su_chat_user_box {
+    background: #FFFFFF;
+    box-shadow: 1.42123px 1.42123px 14.2123px 2.84247px rgba(0, 0, 0, 0.05);
+    border-radius: 21.3185px;
+    padding: 8px 20px;
+}
+.su_chat_user_box.active{
+    border: 2px solid #01B537 !important;
+}
+
+.su_chat_user_img {
+    width: 69px;
+    height: 69px;
+}
+
+.su_chat_user_img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    object-fit: fill;
+    margin-top: -22px;
+}
+
+.su_chat_user_name {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 32px;
+    margin-bottom: 0px;
+    color: #313131;
+}
+
+.su_chat_user_chat {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 28px;
+    color: #727272;
+    margin-bottom: 0px;
+}
+
+.su_chat_user_chat_margin {
+    margin-left: 10px;
+}
+
+.su_flex_column {
+    display: flex;
+    flex-direction: column;
+}
+
+.su_chat_seen {
+    font-weight: 400;
+    font-size: 15.6336px;
+    line-height: 23px;
+    margin-bottom: 0px;
+    color: #727272;
+    text-align: end;
+}
+
+.su_seen_img {
+    width: 25px;
+    height: 25px;
+    margin-left: auto;
+}
+
+.su_seen_img img {
+    width: 100%;
+    height: 100%;
+}
+.su_active_badge{
+    background: #01B537 !important;
+    padding: 6px 6px !important;
+    border: #ffff solid 1px;
+    font-size: 1px;
+    color: #01B537;
+}
+.su_unactive_badge{
+    background: #BFBFBF !important;
+    padding: 6px 6px !important;
+    border: #ffff solid 1px;
+    font-size: 1px;
+    color: #BFBFBF;
+}
+.su_position_active{
+    position: relative;
+    margin-left: 50px;
+}
+.su_chat_margin_top{
+    margin: 20px 0px;
+    height: 100vh;
+    overflow-y: scroll;
+}
+.su_chat_filter_icon{
+    display: none;
+}
+.su_width_lg_100{
+    width: 100%;
+}
+.su_chat_filter_btn{
+    border: none;
+    background-color: transparent;
+}
+.su_chat_filter_btn:focus-visible {
+    outline: none !important;
+}
+.su_user_name_topic{
+    font-weight: 500;
+    font-size: 21.3185px;
+    line-height: 32px;
+    margin-bottom: 0px;
+    color: #313131;
+    margin-left: 12px;
+}
+.su_user_name_and_back{
+    background: #FFFFFF;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 12px 35px;
+}
+.su_container_dashboard_chat{
+    width: 100%;
+}
+.su_img_user_main{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.su_img_user_main img{
+    width: 100%;
+    height: 100%;
+}
+.su_detail_page_bg{
+    background: #F5F5F5;
+    height: 100vh;
+}
+.su_padding_chat_section{
+    padding: 0px 35px;
+}
+.su_day_name_date{
+    font-weight: 400;
+    font-size: 16.6783px;
+    line-height: 25px;
+    text-align: center;
+    color: #858585;
+    padding: 20px 0px;
+    margin-bottom: 0px;
+}
+.su_chat_right{
+    width: 60%;
+    margin-left: auto;
+}
+.su_msg{
+    background: #FFFFFF;
+    box-shadow: 1.28295px 1.28295px 6.41473px 2.56589px rgba(0, 0, 0, 0.1);
+    border-radius: 21.2613px 21.2584px 0px 21.2613px;
+    font-weight: 400;
+    font-size: 19.8439px;
+    line-height: 30px;
+    color: #313131;
+    padding: 18px;
+}
+.su_msg_receive{
+    background: #01B537;
+border-radius: 21.2613px 21.2613px 21.2613px 0px;
+font-weight: 400;
+font-size: 19.8439px;
+line-height: 30px;
+padding: 18px;
+color: #FFFFFF;
+}
+.su_msg_time{
+    font-weight: 400;
+font-size: 17.009px;
+line-height: 23px;
+color: #ADB3BC;
+margin-bottom: 0px;
+}
+.su_chat_left{
+    width: 60%;
+    margin-right: auto;
+}
+.su_user_msg_send_img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+.su_user_msg_send_img img{
+    width: 100%;
+    height: 100%;
+}
+.su_chat_width{
+    width: 80%;
+}
+.su_msg_send_input{
+    border: none;
+    background-color: none;
+    border-radius: 29.3478px;
+    font-weight: 400;
+    font-size: 14.087px;
+    line-height: 21px;
+    color: #727272;
+    width: 100%;
+    background: #FFFFFF;
+    box-shadow: inset 1.17391px 1.17391px 7.04348px rgb(0 0 0 / 15%);
+    border-radius: 29.3478px;
+    padding: 12px 20px;
+    width: 100%;
+}
+.su_msg_send_input:focus-visible {
+    outline: none !important;
+}
+.su_chat_width_10{
+    width: 10%;
+    text-align: center;
+}
+.su_chat_width_80{
+    width: 80%;
+    text-align: center;
+}
+.su_img_height{
+    width: 40px;
+    height: 40px;
+}
+.su_padding_msg_send_input{
+    padding: 20px 35px;
+    box-shadow: 1.10047px 1.10047px 11.0047px rgba(0, 0, 0, 0.1);
+border-radius: 11.0047px 11.0047px 0px 0px;
+}
+/* chat style end  */
