--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2727,8 +2727,6 @@ p.dis_content {
     color: white;
 }
 
-.su_search_filter_img {}
-
 .su_search_border {
     border: none;
     width: 100%;
@@ -3789,6 +3787,19 @@ margin-bottom: 0px;
 .su_padding_msg_send_input{
     padding: 20px 35px;
     box-shadow: 1.10047px 1.10047px 11.0047px rgba(0, 0, 0, 0.1);
-border-radius: 11.0047px 11.0047px 0px 0px;
+    border-radius: 11.0047px 11.0047px 0px 0px;
+}
+.su_Shared_Contents{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    color: #0E2932;
+    margin-bottom: 22px;
+}
+
+.su_Shared_Contents_img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
 }
 /* chat style end  */
